# resume-agent

./: .dockerignore  Dockerfile  docker-compose.yml  notes.txt  pyproject.toml
app/: auth.py  database.py  main.py
app/data/: users.csv
app/templates/: base.html  login.html  resume.html
src/resume_agent/: __init__.py
