[project]
name = "resume-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "pandas>=2.3.3",
    "flask-socketio>=5.5.1",
    "flask-login>=0.6.3",
    "flask-sock>=0.7.0",
    "groq>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
